2007-03-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: improvements to common build environment
	* doc/man/Makefile.am: added manula pages
	* doc/man/man4/dlgn.4.man: updated with *Driver name
	* doc/man/man4/dvbm.4.man: updated with *Driver name
	* doc/man/man4/gncfd.4.man: updated with *Driver name
	* doc/man/man4/gpio.4.man: updated with *Driver name
	* doc/man/man4/mercd.4.man: updated with *Driver name
	* doc/man/man4/sctmr.4.man: updated with *Driver name
	* doc/man/man5/osr61.5.man: updated with *Driver name
	* src/drivers/mercd/include/msdlinux.h (__NO_VERSION__): do not redefine
	* doc/manual/news.texi: updated for release

	* doc/man/man4/dlgnDriver.4.man: added manual page
	* doc/man/man4/dvbmDriver.4.man: added manual page
	* doc/man/man4/gncfdDriver.4.man: added manual page
	* doc/man/man4/gpioDriver.4.man: added manual page
	* doc/man/man4/mercdDriver.4.man: added manual page
	* doc/man/man4/sctmrDriver.4.man: added manual page

2007-02-28  Brian Bidulock  <bidulock@openss7.org>

	* m4/chan.m4: make sure build directory exists
	* m4/genksyms.m4: make sure build directory exists
	* m4/inet.m4: make sure build directory exists
	* m4/isdn.m4: make sure build directory exists
	* m4/iso.m4: make sure build directory exists
	* m4/kernel.m4: make sure build directory exists
	* m4/nsl.m4: make sure build directory exists
	* m4/sctp.m4: make sure build directory exists
	* m4/sigtran.m4: make sure build directory exists
	* m4/sock.m4: make sure build directory exists
	* m4/ss7.m4: make sure build directory exists
	* m4/strcomp.m4: make sure build directory exists
	* m4/streams.m4: make sure build directory exists
	* m4/voip.m4: make sure build directory exists
	* m4/xns.m4: make sure build directory exists
	* m4/xti.m4: make sure build directory exists

	* acinclude.m4: #ifdef instead of #if
	* doc/manual/bugs.texi: updates and corrections
	* doc/manual/news.texi: updates and corrections
	* doc/manual/osr61.texi: updates and corrections