@@ -1,11 +1,11 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: news.texi,v 0.9.2.18 2007/03/02 09:23:24 brian Exp $
+@c @(#) $Id: news.texi,v 0.9.2.19 2007/03/02 10:30:18 brian Exp $
 @c
 @c =========================================================================
 @c
-@c Copyright (c) 2001-2006  OpenSS7 Corporation <http://www.openss7.com/>
+@c Copyright (c) 2001-2007  OpenSS7 Corporation <http://www.openss7.com/>
 @c
 @c All Rights Reserved.
 @c
@@ -53,7 +53,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2007/03/02 09:23:24 $ by $Author: brian $
+@c Last Modified $Date: 2007/03/02 10:30:18 $ by $Author: brian $
 @c
 @c =========================================================================
 
